fix: update .env.example formatting

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# "testnet" or "mainnet"
-network="testnet"
+# testnet or mainnet
+network=testnet
 # seed phrase for scripts to use
-mnemonic="use a twelve or twenty four word seed phrase for the scripts and be sure to keep it safe and never share with anyone"
+mnemonic=use a twelve or twenty four word seed phrase for the scripts and be sure to keep it safe and never share with anyone
 # the index of the account to use for the scripts
 # first account = index 0
 accountIndex=0
