--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-{ "dependencies": { "@stacks/wallet-sdk": "^6.11.3" } }
+{
+  "scripts": {
+    "generate-mnemonic": "node -e 'import(\"@stacks/wallet-sdk\").then(({generateSecretKey}) => console.log(generateSecretKey()))'"
+  },
+  "dependencies": {
+    "@stacks/wallet-sdk": "^6.11.3"
+  }
+}
