fix: update folder layout, script structures
This aims to simplify which parts to edit and bring the constants up to date with latest contract info. Also moves env initialization outside configuration in case someone wants to override or set directly.

--- a/package.json
+++ b/package.json
@@ -1,1 +1,9 @@
-{ "dependencies": { "@stacks/wallet-sdk": "^6.11.3" } }
+{
+  "name": "scripts",
+  "version": "0.0.2",
+  "private": true,
+  "dependencies": {
+    "@stacks/transactions": "^6.11.3",
+    "@stacks/wallet-sdk": "^6.11.3"
+  }
+}
