--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "@stacks/stacks-blockchain-api-types": "^7.9.0",
     "@stacks/transactions": "^6.12.1",
     "@stacks/wallet-sdk": "^6.12.1"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.1.6",
+    "bun-types": "^1.1.17"
   }
 }
