--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "dependencies": {
+    "@stacks/blockchain-api-client": "^7.13.0",
     "@stacks/bns": "^6.15.0",
     "@stacks/stacks-blockchain-api-types": "^7.9.0",
     "@stacks/transactions": "^6.12.1",
