--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "dependencies": {
+    "@bitflowlabs/core-sdk": "^1.0.1",
     "@stacks/bns": "^6.15.0",
     "@stacks/connect": "^7.7.1",
     "@stacks/stacking": "^6.16.1",
