--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ BITFLOW_API_HOST=
 BITFLOW_API_KEY=
 BITFLOW_STACKS_API_HOST=https://api.hiro.so/
 BITFLOW_READONLY_CALL_API_HOST=
+
+JING_API_URL=https://backend-neon-ecru.vercel.app/api
+JING_API_KEY=dev-api-token
