start integration with bonding curves

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,12 @@ MNEMONIC=use a twelve or twenty four word seed phrase for the scripts and be sur
 # the index of the account to use for the scripts
 # first account = index 0
 ACCOUNT_INDEX=0
+
 # bitflow keys you can get from their discord
 BITFLOW_API_HOST=
 BITFLOW_API_KEY=
 BITFLOW_STACKS_API_HOST=https://api.hiro.so/
 BITFLOW_READONLY_CALL_API_HOST=
+
+HIRO_API_KEY=
+STXCIRTY_API_HOST=
