--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@bitflowlabs/core-sdk": "^1.0.1",
     "@jingcash/core-sdk": "^0.1.4",
+    "@stacks/blockchain-api-client": "^8.4.0",
     "@stacks/bns": "^6.15.0",
     "@stacks/connect": "^7.7.1",
     "@stacks/stacking": "^6.16.1",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
+    "@types/node": "^22.10.2",
     "bun-types": "^1.1.17"
   }
 }
