--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aibtcdev/tools",
   "version": "0.0.5",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@bitflowlabs/core-sdk": "^1.0.1",
     "@jingcash/core-sdk": "^0.1.4",
