--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@stacks/transactions": "^6.12.1",
     "@stacks/wallet-sdk": "^6.12.1",
     "bitflow-sdk": "^1.6.1",
-    "eta": "^3.5.0",
-    "stxcity-sdk": "^1.0.10",
-    "tslib": "^2.7.0",
-    "commander": "^11.0.0",
     "chalk": "^5.3.0",
+    "commander": "^11.0.0",
+    "dexterity-sdk": "^0.6.4",
+    "dotenv": "^16.3.1",
+    "eta": "^3.5.0",
     "ora": "^7.0.1",
-    "dotenv": "^16.3.1"
+    "stxcity-sdk": "^1.0.10",
+    "tslib": "^2.7.0"
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
