--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.7",
     "eta": "^3.5.0",
     "ora": "^7.0.1",
+    "ordinalsbot": "^0.2.15",
     "stxcity-sdk": "^1.0.10",
     "tslib": "^2.8.1"
   },
