--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
     "@stacks/stacks-blockchain-api-types": "^7.14.1",
     "@stacks/transactions": "^6.17.0",
     "@stacks/wallet-sdk": "^6.17.0",
+    "axios": "^1.7.9",
+    "bitcoinjs-lib": "^6.1.7",
     "bitflow-sdk": "^1.6.1",
     "chalk": "^5.4.1",
     "commander": "^11.1.0",
     "dotenv": "^16.4.7",
+    "ecpair": "^3.0.0-rc.0",
     "eta": "^3.5.0",
     "ora": "^7.0.1",
     "ordinalsbot": "^0.2.15",
     "qs": "^6.14.0",
+    "sats-connect": "^3.2.0",
     "stxcity-sdk": "^1.0.10",
+    "tiny-secp256k1": "^2.2.3",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
