feat: minor mods to revive npm packaging

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,7 @@ BITFLOW_READONLY_CALL_API_HOST=
 JING_API_URL=https://backend-neon-ecru.vercel.app/api
 JING_API_KEY=dev-api-token
 
-HIRO_API_KEY=
-STXCIRTY_API_HOST=
+HIRO_API_KEY=your-api-key
+
+AIBTC_FAKTORY_API_KEY=your-api-key
+AIBTC_CORE_API_KEY=your-api-key
