fix: add temp empty test to expand on

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit",
+    "test": "echo \"No tests specified - skipping tests\" && exit 0",
     "version:patch": "npm version patch -m \"chore: release v%s\"",
     "version:minor": "npm version minor -m \"chore: release v%s\"",
     "version:major": "npm version major -m \"chore: release v%s\"",
