--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@aibtcdev/agent-tools",
   "version": "0.0.1",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
