fix: more packaging tweaks, org setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aibtcdev/agent-tools",
+  "name": "@aibtc/agent-tools",
   "version": "0.0.1",
   "private": false,
   "publishConfig": {
