feat: add AIBTC_DEFAULT_FEE as env var with 0.1 STX default
Loads into main config in src/utilities.ts then can be used anywhere in app from the config object.

--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,6 @@ JING_API_KEY=dev-api-token
 
 HIRO_API_KEY=your-api-key
 
+AIBTC_DEFAULT_FEE=100000 # in uSTX = 0.1 STX
 AIBTC_FAKTORY_API_KEY=your-api-key
 AIBTC_CORE_API_KEY=your-api-key
