--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@aibtc/types": "^0.1.0",
     "@types/bun": "^1.2.13",
     "@types/node": "^22.15.18",
     "bun-types": "^1.2.13",
