--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # testnet or mainnet
 NETWORK=testnet
 # seed phrase for scripts to use
-MNEMONIC=use a twelve or twenty four word seed phrase for the scripts and be sure to keep it safe and never share with anyone
+MNEMONIC=
 # the index of the account to use for the scripts
 # first account = index 0
 ACCOUNT_INDEX=0
